# Movie-Recommender

./: LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
core/: urls.py
core/templates/core/: login.html
movie_recommendation/: asgi.py  urls.py
movie_recommendation-main/: LICENSE  package-lock.json  pyproject.toml  requirements.txt
movie_recommendation-main/core/: forms.py  views.py
movie_recommendation-main/core/templates/core/: change_password.html  home.html  profile.html  register.html
movie_recommendation-main/movie_recommendation/: settings.py  wsgi.py
movie_recommendation-main/movies/: admin.py  recommendation.py  views.py
movie_recommendation-main/movies/templates/movies/: movie_genre_list.html  movie_list.html
movie_recommendation-main/static/css/: input.css
movie_recommendation-main/static/js/: footer.js  navbar.js  navbarProfile.js  watch.js
movie_recommendation-main/static/ts/: navbarProfile.ts
movie_recommendation-main/templates/: base.html
movie_recommendation-main/templates/components/: movie_card_row.html
movie_recommendation-main/templates/includes/: footer.html
movies/: models.py  urls.py
movies/templates/movies/: watch.html
static/css/: output.css
static/ts/: footer.ts  navbar.ts  watch.ts
templates/components/: movie_card.html
templates/includes/: navbar.html
