[project]
name = "Movie-Recommender"
version = "0.1.0"
description = "A Movie Recommender that allows users to discover movies based on popularity, genre, and content-based filtering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "fontawesomefree>=6.6.0",
    "mysqlclient>=2.2.7",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]
